overflow hidden fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1639,7 +1639,6 @@ button{
 		width: 100%;
 		height: 80px !important;
 		min-height: 80px;
-		overflow: hidden;
 		position: relative;
 		margin-bottom: 20px;
 		background-color: #F9F9F9;
